--- a/metadata.yaml
+++ b/metadata.yaml
@@ -29,5 +29,6 @@ subjects:
 - !lcc 'PN'
 - !lcc 'BF'
 - !lcsh 'Tragedy'
+- GITenberg
 title: Der Streit über die Tragödie
 url: http://www.gutenberg.org/ebooks/8375
